add all changes

--- a/css/login.css
+++ b/css/login.css
@@ -70,7 +70,7 @@ fieldset {
     padding: 8px;
     font-weight: bold;
     color: #ffffff;
-    border: 1px solid lightgray;
+    border: 1px solid lightgrey;
 }
 
 .btn-block {
