--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,11 +1,64 @@
+/* mobile */
+@media only screen and (max-width: 768px) {
+    body {
+        background-color: lightblue;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 768px;
+        height: auto;
+    }
+    .header-img{
+        width: 339px;
+        height: 224px;
+    }
+    h1 {
+        position: relative;
+        float:left;
+        width: 50%;
+    }
+    ul {
+        list-style: none;
+    }
+    .nav-links {
+        position: relative;
+        display: inline-block;
+        float: right;
+        background-color: gray;
+    }
+    .nav-links>li {
+        display: inline-block}
+}
+.main {
+    float: left;
+    width: 50%;
+}
+.sub-section {
+    float: right;
+    font-style: italic;
+    width: 50%;
+}
+
+
+
+
+
+
+
+/* Webpage */
 @media only screen and (min-width: 768px) {
     body {
         background-color: lightblue;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 768px;
+        height: auto;
     }
 }
-.responsive{
-    width: 100%;
-    height: auto;
+.header-img{
+    width: 339px;
+    height: 224px;
 }
 h1 {
     position: relative;
@@ -19,9 +72,12 @@ ul {
     position: relative;
     display: inline-block;
     float: right;
-    background-color: red;
-    margin: 1em 0 1em 0;
+    background-color: gray;
 }
+.nav-links>li {
+display: inline-block
+}
+
 .main {
     float: left;
     width: 50%;
