--- a/css/custom.css
+++ b/css/custom.css
@@ -5,8 +5,8 @@
 }
 h1 {
     opacity: .5;
-    background-color: rgba(198,205,205,0.8);
-}
-nav {
-    display: inline-block;
+    background-color: rgba(198, 205, 205, 0.8);
+    width: 100%;}
+.btn {
+    float: right;
 }
